fix: change notification system